--- a/_includes/main.css
+++ b/_includes/main.css
@@ -121,6 +121,7 @@ a:hover {
 /*----- TIMELINE CONTENT -----*/
 .timeline-content {
   padding-bottom: 40px;
+  white-space: pre-line;
 }
 .timeline-content p:last-child {
   margin-bottom: 0;
