--- a/_includes/main.css
+++ b/_includes/main.css
@@ -125,7 +125,7 @@ a:hover {
 .timeline-content p:last-child {
   margin-bottom: 0;
 }
-.timeline-content-multiline {
+.multiline {
   white-space: pre-line:
 }
 
